# tse-data-analysis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  deploy.yaml  test.yaml
airflow/dags/: etl.py
k8s/: airflow-postgresql.yaml  airflow-scheduler-deployment.yaml  airflow-webserver-deployment.yaml  airflow-webserver-service.yaml  airflow-worker-deployment.yaml  deployment.yaml  ingress.yaml  pod.yaml  service.yaml
pipelines/: 00_ingestion.ipynb  01_cleansing.ipynb  ingestion.py
pipelines/__tests__/integration/: test_ingestion.py
pipelines/__tests__/unit/: test_ingestion.py
src/: 00_ingestion.ipynb  00_setup.ipynb
